Revision to the sonar tasks